[gd_scene load_steps=3 format=3 uid="uid://nfofbgvn8r41"]

[ext_resource type="Texture2D" uid="uid://eapdg5rk1sxp" path="res://Assets/Icons/redo.png" id="1_bg0pm"]
[ext_resource type="Script" path="res://src/UI/Components/Scripts/input_color.gd" id="1_r56mg"]

[node name="InputColor" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -602.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r56mg")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1
text_overrun_behavior = 3

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2

[node name="ResetButton" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("1_bg0pm")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "a"

[connection signal="pressed" from="Control/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
